--- a/css/style.css
+++ b/css/style.css
@@ -10,30 +10,18 @@ li a,
 
 .header {
     border: 1px solid #000;
-    display: block;
+    padding-top: 15px;
 }
 
 .header-logo {
     border: 1px solid #000;
 }
 
-.header-wrapper {
-    display: flex;
-    position: absolute;
-    width: 1920px;
-    height: 85px;
-    left: 0px;
-    top: 0px;
-
-    background: #FFF;
-    display: flex;
-    border: 1px solid #a80202;
-}
-
 .header-menu {
     display: flex;
     width: 1240px;
     margin: auto;
+    margin-bottom: 15px;
     border: 1px solid #02a834;
     justify-content: space-between;
 }
@@ -51,27 +39,25 @@ li a,
 
 
 
-.header-menu-list a{
+.menu-text{
     color: #2E2E2E;
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 18px;
-    
 }
 
-.visited:visited {
-    color: #2E2E2E;
-} 
+.menu-text:visited { color: #2E2E2E; }
 
-.hover-red:hover {
+.menu-text:hover {
     color: #DE3726;
     font-weight: 500;
 }
 
+.menu-text:active { color: #de3826a8; }
+
 .header-contacts {
-    
     width: 200px;
     display: flex;
     flex-wrap: wrap;
@@ -105,27 +91,86 @@ li a,
     font-size: 16px;
     line-height: 18px;
     color: #E93324;
-    border-bottom: 1.5px solid #E93324;
 }
 
-.banner-main {
-    display: block;
-    position: absolute;
-    width: 1920px;
-    height: 648px;
-    left: 0px;
-    top: 85px;
+.header-phone:hover {
+    color: #E93324;
+    font-weight: 500;
+}
+
+.callback:hover {
+    color: #E93324;
+    font-weight: 500;
+    text-decoration: underline;
+}
+
+.header-phone:active,
+.callback:active { color: #de3826a8; }
+
+.banner-block {
     background-image: url("https://s3-alpha-sig.figma.com/img/015d/0398/6419097a4abd4d0c912f6f61d517cdce?Expires=1612742400&Signature=U53Jzs5qeJVfEtGRLYQk~rHuvUftaBxjtkHpdGJMvIpibnd8TijNBs5N8kdOPA~iVZByC9dipN55Qbe3f5LtjXdw5qkqvf41R9yFLHiuqeeutU8BttvWJaGNx4mKkKqu4vVrSphedx8MR1pVeMwPFzGhkUJ~CFhmzLsPJE2PpELDEM94tA0lSoQL6QtDJtI6dVQobmZX1ZQk07ealLCtNML9S3lZKlJoqx8bgAsRq6KR7fYVwJDb0Vc4DkGv~qOH-TuT0M6t4r3DSxhoYrVb30TQSmC~HHt3gTJeFuRMCTj9JeP393QCpQbSCYU0F0JJwHvUc-C49H~mkfcGo6LTog__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+    height: 648px;
+}
+
+.layout-positioner {
+    display: flex;
+    height: 648px;
+    border: 2px dashed #3498db;
+    width: 1240px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
 .header-text1 {
-    font-family: Ubuntu;
+    font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 18px;
     text-transform: uppercase;
-
     color: #FFFFFF;
 }
+.header-text2 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 52px;
+    line-height: 54px;
+    /* or 104% */
+    color: #FFFFFF;
+}
+
+.header-text3 {
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    /* or 133% */
+    color: #FFFFFF;
+}
+
+.banner-btn {
+    color: #fff; /* цвет текста */
+    text-decoration: none; /* убирать подчёркивание у ссылок */
+    text-transform: uppercase;
+    user-select: none; /* убирать выделение текста */
+    background: #DE3726;
+    padding: .7em 1em; /* отступ от текста */
+    outline: none; /* убирать контур в Mozilla */
+  } 
+
+  .banner-btn-block {margin-top: 50px;}
+
+  a.banner-btn:hover { background: rgb(232,95,76); } /* при наведении курсора мышки */
+  a.banner-btn:active { background: rgb(152,15,0); } /* при нажатии */
+
+  .banner-text-flex {
+      display: flex;
+      flex-direction: column;
+      width: 560px;
+      flex-wrap: wrap;
+      justify-content: center;
+      border: 1px solid black;
+  }
